🦟 FIX: Text alignment in header following global change

--- a/30. blogr-landing-page/scss/blocks/_header.scss
+++ b/30. blogr-landing-page/scss/blocks/_header.scss
@@ -4,6 +4,7 @@ header {
 	background-position: 30%;
 	color: var(--clr-neutral-100);
 	border-radius: 0 0 0 5rem;
+	text-align: center;
 }
 
 .headline {
